--- a/.github/jenkins-jobdsl-test.yaml
+++ b/.github/jenkins-jobdsl-test.yaml
@@ -14,3 +14,6 @@ jobs:
           java-version: 1.8
       - name: Build with Gradle
         run: ./gradlew test
+        env:
+          DEFAULT_BRANCH: master
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
